@@ -1,46 +1,5 @@
 //------------------------------------------------------------------------------
 // Class:	Message
-// enum:    AckCodes
-// Base class: Basic::Object -> Message
-//
-// Description: 'Generic' Eaagles Message. Used as a base class for other generic messages
-//
-// Slots:
-//      none
-// Events:
-//      none
-////get functions
-//  Eaagles::Basic::String* getSenderName()                       { return senderName;   }
-//      Description: returns the message senders name
-//  Eaagles::Basic::List* getDestNames()                          { return destNames;     }
-//      Description: returns the list of destination name strings
-//  double getTimeStamp()                   { return timeStamp;     }
-//      Description: returns the time at which this message was sent (if on receive end)
-//  double getLifeSpan()                    { return lifeSpan;      }
-//      Description: returns the length of time in seconds which this message is valid
-//  AckCodes getAckCode()                   { return ack;           }
-//      Description: returns the ack code for this message
-//
-////set functions
-//  void setSenderName(Eaagles::Basic::String* sName)   
-//      Description: sets the sender name of this message to the value passed in as a parameter
-//  void setSenderName(const char* const sName)           
-//      Description: sets to sender name of this message to the value passed in as a parameter
-//      Pre: sName should be null terminated
-//  void setTimeStamp(double ts)            { timeStamp = ts;       }
-//      Description: sets the time stamp to the value passed in as a parameter
-//  void setLifeSpan(double ls)             { lifeSpan = ls;        }
-//      Description: sets the life span of to the value passed in as a parameter
-//  void setAckCode(AckCodes a)             { ack = a;              }
-//      Description: sets the ack code to the value passed in as parameter
-//
-////misc functions
-//  bool addDestName(Eaagles::Basic::String* name);
-//      Description: adds a destination name to the list of intended recipients of this message
-//  void removeDestName(Eaagles::Basic::String* name);
-//      Description: removes all destination names that fully match the value passed in as a parameter
-//  void clearDestNames();
-//      Description: clears the list of destination names
 //----------------------------------------------------------------------------------
 
 #ifndef __Eaagles_Simulation_Message_H__
@@ -53,44 +12,66 @@
 namespace Eaagles {
 namespace Simulation {
 
+//------------------------------------------------------------------------------
+// Class: Message
+// Description: 'Generic' Message. Used as a base class for other generic messages
+//----------------------------------------------------------------------------------
 class Message : public Eaagles::Basic::Object
 {
-    DECLARE_SUBCLASS(Message,Eaagles::Basic::Object)
+   DECLARE_SUBCLASS(Message,Eaagles::Basic::Object)
 
 public:
-    //left as enum for future use
-    enum AckCodes { ACK_REQUESTED, ACK };
+   //left as enum for future use
+   enum AckCodes { ACK_REQUESTED, ACK };
 
-    Message();
+public:
+   Message();
 
-    //get functions
-    Eaagles::Basic::String* getSenderName()                         { return senderName;    }
-    Eaagles::Basic::List* getDestNames()                            { return destNames;     }
-    virtual double getTimeStamp()                                   { return timeStamp;     }
-    virtual double getLifeSpan()                                    { return lifeSpan;      }
-    AckCodes getAckCode()                                           { return ack;           }
+   const Eaagles::Basic::String* getSenderName() const;  // Name of the message sender
+   const Eaagles::Basic::List* getDestNames() const;     // List of destination name String
 
-    //set functions
-    virtual void setSenderName(Eaagles::Basic::String* sName);
-    virtual void setSenderName(const char* const sName);
-    virtual void setTimeStamp(double ts)                            { timeStamp = ts;       }
-    virtual void setLifeSpan(double ls)                             { lifeSpan = ls;        }
-    virtual void setAckCode(AckCodes a)                             { ack = a;              }
+   double getTimeStamp() const;     // time at which this message was sent (if on receive end)
+   double getLifeSpan() const;      // length of time in seconds which this message is valid
+   AckCodes getAckCode() const;     // the ack code for this message
 
-    //misc functions
-    virtual bool addDestName(Eaagles::Basic::String* name);
-    virtual void removeDestName(Eaagles::Basic::String* name);
-    virtual void clearDestNames();
+   //set functions
+   virtual void setSenderName(const Eaagles::Basic::String* const sName);
+   virtual void setSenderName(const char* const sName);
+   virtual void setTimeStamp(const double ts);
+   virtual void setLifeSpan(const double ls);
+   virtual void setAckCode(const AckCodes a);
+
+   // adds a destination name to the list of intended recipients of this message
+   virtual bool addDestName(Eaagles::Basic::String* const name);
+   virtual bool addDestName(const char* const name);
+
+   // removes all destination names that fully match the value passed in as a parameter
+   virtual void removeDestName(Eaagles::Basic::String* const name);
+
+   // clears the list of destination names
+   virtual void clearDestNames();
 
 private:
-    void initData();
+   void initData();
 
-    Eaagles::Basic::String* senderName;    // name of sending player
-    Eaagles::Basic::List* destNames;       // player names to whome this message is intended for
-    double timeStamp;                      // time at which this message was sent
-    double lifeSpan;                       // seconds
-    AckCodes ack;                          // ack code
+   Eaagles::Basic::String* senderName;    // name of sending player
+   Eaagles::Basic::List* destNames;       // player names to whome this message is intended for
+   double timeStamp;                      // time at which this message was sent
+   double lifeSpan;                       // seconds
+   AckCodes ack;                          // ack code
 };
+
+// inline functions
+inline const Eaagles::Basic::String* Message::getSenderName() const     { return senderName;    }
+inline const Eaagles::Basic::List* Message::getDestNames() const        { return destNames;     }
+inline double Message::getTimeStamp() const                             { return timeStamp;     }
+inline double Message::getLifeSpan() const                              { return lifeSpan;      }
+inline Message::AckCodes Message::getAckCode() const                    { return ack;           }
+
+inline void Message::setTimeStamp(const double ts)                      { timeStamp = ts;       }
+inline void Message::setLifeSpan(const double ls)                       { lifeSpan = ls;        }
+inline void Message::setAckCode(const AckCodes a)                       { ack = a;              }
+
 } // End simulation
 } // End Eaagles Namespace
 
